--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The package joins arguments of xcodebuild and returns a string ready to executing in shell.",
   "main": "gulp-xcodebuild.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
