--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "github.com/kreshikhin/gulp-xcodebuild"
+    "url": "git+ssh://github.com/kreshikhin/gulp-xcodebuild.git"
   },
   "keywords": [
     "gulp",
